2010-07-05  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (Features): Update list of supported file systems.
	(GNU/Linux): Update for GRUB 2.
	(Serial terminal): Remove mention of --disable-serial, which was a
	GRUB Legacy configure option.  Update instructions to use
	`terminal_input' and `terminal_output' rather than `terminal'.
	(Vendor power-on keys): Copy-edit.  Add cross-references to `Simple
	configuration' and `Installing GRUB using grub-install'.
	(Menu entry editor): Update for GRUB 2.
	(terminfo): Add vt100-color, ieee1275, and dumb terminal types.
	Document new -a, -u, and -v options.
	(initrd): New section.
	(initrd16): New section.
	(linux): New section.
	(linux16): New section.
	(search): The `var' argument to `--set' is optional.
	(GRUB only offers a rescue shell): Go into a little more detail on
	drive ordering.

2010-07-05  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.in: Set LINGUAS to empty if ENABLE_NLS is undefined.

2010-07-05  Colin Watson  <cjwatson@ubuntu.com>

	* Makefile.in (MAINTAINER_CLEANFILES): Add unicode/UnicodeData.txt,
	unicode/BidiMirroring.txt, unicode/ArabicShaping.txt, and unidata.c.

2010-07-05  Colin Watson  <cjwatson@ubuntu.com>

	* util/i386/pc/grub-setup.c (setup): Rename prefix to
	install_prefix, in line with install_dos_part and install_bsd_part.
	Add new prefix variable, which is copied to install_prefix after
	comparing core.img in memory with the one read from disk in the
	no-embedding case, and use that rather than overwriting
	install_prefix immediately when installing to a partition.
	Fixes Debian bug #586621; based on patches by Matt Kraai and M. Vefa
	Bicakci.

2010-07-04  Grégoire Sutre  <gregoire.sutre@gmail.com>

	* configure.ac: Avoid == in test command, it's not portable.
	* util/grub.d/30_os-prober.in: Likewise.

2010-07-04  Colin Watson  <cjwatson@ubuntu.com>

	* kern/emu/getroot.c [__GNU__]: Include <sys/mman.h> for munmap.

2010-07-04  Grégoire Sutre  <gregoire.sutre@gmail.com>
